# spec-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: coding-worker.md
.github/workflows/: RELEASE-PROCESS.md  release-trigger.yml  release.yml  sync-upstream.yml  test.yml
.specify/: .file-hashes
docs/: upgrade.md
extensions/: README.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json
scripts/: agent-registry.txt
scripts/bash/: clarify-requirement-guard.sh  common.sh  create-new-feature.sh  find-placeholders.sh  pipeline-stage-gate.sh  scan-flyway-versions.sh  update-agent-context.sh
scripts/powershell/: agent-registry.ps1  common.ps1  create-new-feature.ps1  find-placeholders.ps1  pipeline-stage-gate.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py  agent_runtime.py  agents.py  command_lint.py  extensions.py  fork_customizations.py  init_runtime.py  presets.py  template_runtime.py
templates/agents/: bug-locator.md  bug-verifier.md  coding-worker.md  impact-analyzer.md  log-analyzer.md  test-runner.md
tests/: test_agent_config_consistency.py  test_ai_skills.py  test_create_new_feature_script.py  test_cursor_frontmatter.py  test_enhanced_commands.py  test_extensions.py  test_find_placeholders_script.py  test_fork_customizations.py  test_init_runtime.py  test_pipeline_stage_gate.py  test_plugin_hooks.py  test_release_packaging_paths.py  test_template_runtime.py  test_update_agent_context_droid.py  test_update_agent_context_symlink.py
(+49 files in other folders)
