[project]
name = "specify-cli"
version = "0.1.0"
description = "Enhanced Specify CLI (Z-WICK fork). Spec-Driven Development toolkit with additional commands: init, pipeline, issue, fixbug."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

